Fix the glob security issue (#243)
* Fix the glob security issue

* wip

* wip

* wip

* fixed prettier issues

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   },
   "scripts": {
     "bundle": "npm run insert-key && npm run format:write && npm run package && npm run uglyfy",
-    "insert-key": "sed -i \"s/export const AMPLITUDE_API_KEY = ''/export const AMPLITUDE_API_KEY = '$AMPLITUDE_API_KEY'/g\" ./src/telemetry/telemetry.ts",
+    "insert-key": "sed -i.bak \"s/export const AMPLITUDE_API_KEY = ''/export const AMPLITUDE_API_KEY = '$AMPLITUDE_API_KEY'/g\" ./src/telemetry/telemetry.ts && rm ./src/telemetry/telemetry.ts.bak",
     "uglyfy": "uglifyjs ./dist/index.js -o ./dist/index.js",
     "ci-test": "jest --runInBand",
     "format:write": "prettier --write **/*.ts",
@@ -114,6 +114,10 @@
   },
   "overrides": {
     "diff": "8.0.3",
-    "undici": "7.18.2"
+    "undici": "7.18.2",
+    "glob": "10.5.0",
+    "test-exclude": {
+      "glob": "7.2.3"
+    }
   }
 }
